2001-04-02  Zack Weinberg  <zackw@stanford.edu>

	* genattr.c, gencheck.c, gencodes.c, genconfig.c, genflags.c,
	gengenrtl.c:  Wrap generated header in multiple-include guard.
	Improve error checking.

2001-04-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* configure.in: Don't check for putenv.
	* configure: Regenerate.
	* gcc.c (putenv): Don't define.
	* vax/xm-vms.h: Handle putenv.

2001-04-02  Jakub Jelinek  <jakub@redhat.com>

	* ifcvt.c (noce_emit_move_insn): New.
	(noce_try_store_flag, noce_try_store_flag_constants,
	noce_try_store_flag_inc, noce_try_store_flag_mask,
	noce_try_cmove, noce_try_cmove_arith, noce_try_minmax,
	noce_try_abs): Use it.
	(noce_process_if_block): Likewise.
	For STRICT_LOW_PART, take mode from its SUBREG.

2001-04-02  Jakub Jelinek  <jakub@redhat.com>

	* fold-const.c (fold): Before optimizing unsigned comparison with
	0x7fffffffU, make sure arg0 is integral type.

2001-04-02  Joseph S. Myers  <jsm28@cam.ac.uk>

	* c-tree.texi: Document representation of wide strings.

2001-04-01  Richard Henderson  <rth@redhat.com>

	* except.h (expand_builtin_dwarf_fp_regnum): Declare.

Sun Apr  1 11:49:05 CEST 2001  Jan Hubicka  <jH@suse.cz>

	* i386.md: remove obsoleted comments.
	(adddi_?): Rename to adddi_?_rex64; disable for 32bit.
	(x86_movsicc_0_m1_rex64): Rename to x86_movdicc_0_m1_rex64;
	fix output template.

2001-03-31  Marek Michalkiewicz  <marekm@linux.org.pl>

	* config/avr/libgcc.S (__mulhi3): Optimize previous change.

2001-03-30  Bernd Schmidt  <bernds@redhat.com>

	* loop.c (load_mems): When generating a load from a pseudo, update
	REGNO_LAST_UID.

Fri Mar 30 17:36:43 CEST 2001  Jan Hubicka  <jh@suse.cz>

	* i386.c (ix86_split_long_move): Use change address to compensate
	stack pointer change in push instruction.

Fri Mar 30 00:31:00 CEST 2001  Jan Hubicka  <jh@suse.cz>

	* i386.md (sse_movdfcc_eq): Fix constraint (sse_mov?fcc splitter): Use operands_match_p
	instead of rtx_equal_p; fix the output template.
