@@ -1,3 +1,8 @@
+2001-04-02  Jakub Jelinek  <jakub@redhat.com>
+
+	* lex.c (ffelex_hash_): Avoid eating one whole line after
+	#line.
+
 2001-04-02  Zack Weinberg  <zackw@stanford.edu>
 
 	* genattr.c, gencheck.c, gencodes.c, genconfig.c, genflags.c,
